# comuni-italiani

./: .gitignore  LICENSE  Procfile  README.md  comuni-italiani.cabal
app/: Main.hs
elm-client/comuni-client/: elm.json
elm-client/comuni-client/public/: index.html  manifest.json
elm-client/comuni-client/src/: Main.elm  main.css
generator/: Main.hs
src/: Comuni.hs  Lib.hs  Positive.hs
test/: Spec.hs
