name:                comuni-italiani
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/luca-apostoli/comuni-italiani#readme
license:             BSD3
license-file:        LICENSE
author:              Luca Apostoli
maintainer:          noreply.apostoli@gmail.com
copyright:           2020 Luca Apostoli
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , base-compat
                     , bytestring
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable comuni-italiani-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , comuni-italiani
  default-language:    Haskell2010

test-suite comuni-italiani-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , comuni-italiani
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/luca-apostoli/comuni-italiani
